--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#6c63ff" />
     <meta
       name="Sonali Singh Portfolio"
-      content="Web site created using create-react-app"
+      content="MERN Stack Developer"
     />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sonali Singh· MERN Stack Developer" />
+    <meta property="og:description" content="Sonali is a Web Developer specialized in React, Node.js and Django . She is a passionate developer who always looks forward to explore new technologies." />
+    <meta property="og:url" content="https://sonalisingh.me/" />
+    <meta property="og:image" content="https://sonalisingh.me/static/media/undraw_web_development_w2vv.e9006b8a.svg" />
+    <meta name="twitter:title" content="Sonali Singh· MERN Stack Developer" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@sonali12_singh">
+    <meta name="twitter:image" content="https://sonalisingh.me/static/media/undraw_web_development_w2vv.e9006b8a.svg" />
+    <meta name="twitter:description" content="Sonali is a Web Developer specialized in React, Node.js and Django . She is a passionate developer who always looks forward to explore new technologies." />
 
     
     <!--
